--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.svg" />
+    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.png" />
     <title>praanto.com</title>
   </head>
   <body>
