--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.png" />
-    <title>praanto.com</title>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://linkfork.co/">
+    <meta property="og:title" content="praanto samadder | student@kth">
+    <meta property="og:description" content="Personal resume website for Praanto Samadder.">
+    <title>Praanto Samadder | student@kth</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
