--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://linkfork.co/">
     <meta property="og:title" content="praanto samadder | student@kth">
     <meta property="og:description" content="Personal resume website for Praanto Samadder.">
+    <meta property="og:image" content="./src/assets/banner.jpeg">
     <title>Praanto Samadder | student@kth</title>
   </head>
   <body>
