--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://linkfork.co/">
     <meta property="og:title" content="praanto samadder | student@kth">
     <meta property="og:description" content="Personal resume website for Praanto Samadder.">
-    <meta property="og:image" content="./src/assets/banner.jpeg">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/f/f4/Table_of_Illustrations_-_Doodle_%28bw%29.jpg">
     <title>Praanto Samadder | student@kth</title>
   </head>
   <body>
